# python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CONTRIBUTING.zh.md  Cargo.toml  Makefile  README.md  README.ru.md  README.zh.md  SECURITY.md  SECURITY.ru.md  SECURITY.zh.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml  release.yml
examples/: README.md  basic.py  bench.py
python/ktav/: __init__.py  _core.pyi
src/: lib.rs
tests/: test_conformance.py  test_dumps.py  test_errors.py  test_load_dump.py  test_loads.py  test_module.py  test_roundtrip.py
